[package]
name = "groq-api-rust"
version = "0.2.51"
edition = "2021"
authors = ["oblivisheee <merizo.labs@gmail.com>"]
description = "This library provides the ability to interact with the Groq API."
repository = "https://github.com/oblivisheee/groq-rs"
license = "Apache-2.0"
keywords = ["groq", "llm", "ai", "language", "api"]
categories = ["api-bindings"]


[dependencies]
futures.workspace = true
log = "0.4.21"
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = "1.38.0"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "fs"] }
tokio-macros = "2.3.0"
